--- a/sgg/project/fund/pom.xml
+++ b/sgg/project/fund/pom.xml
@@ -8,7 +8,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.2.2.RELEASE</version>
+        <version>2.0.9.RELEASE</version>
         <relativePath /> <!-- lookup parent from repository -->
     </parent>
     <properties>
@@ -81,6 +81,7 @@
 
     <!-- 这个插件，可以将应用打包成一个可执行的jar包；-->
     <build>
+        <finalName>fund-2.2.2.RELEASE</finalName>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
