--- a/sgg/project/fund/pom.xml
+++ b/sgg/project/fund/pom.xml
@@ -89,6 +89,11 @@
             <artifactId>xxl-job-core</artifactId>
             <version>2.4.0</version>
         </dependency>
+        <dependency>
+            <groupId>cn.hutool</groupId>
+            <artifactId>hutool-all</artifactId>
+            <version>5.7.20</version>
+        </dependency>
     </dependencies>
 
     <!-- 这个插件，可以将应用打包成一个可执行的jar包；-->
